# logger_system

./: .cppcheck  .gitguardian.yaml  .gitignore  01-example.html  0af7651916cd43dd8448eb211c80319c-example.html  1_82_83-example.html  ADR-001-decorator-pattern-adoption_8md.html  ADR-002-async-writer-architecture_8md.html  API_REFERENCE.md  API__DOCUMENTATION_8md.html  API__QUICK__REFERENCE_8md.html  API__REFERENCE_8kr_8md.html  API__REFERENCE_8md.html  API__REFERENCE__CORE_8md.html  API__REFERENCE__SECURITY_8md.html  API__REFERENCE__WRITERS_8md.html  ARCHITECTURE.md  ARCHITECTURE_8kr_8md.html  ARCHITECTURE_8md.html  ASYNC__WRITERS_8kr_8md.html  ASYNC__WRITERS_8md.html  Advanced-example.html  BASELINE.md  BASELINE_8kr_8md.html  BASELINE_8md.html  BENCHMARKS_8kr_8md.html  BENCHMARKS_8md.html  BEST__PRACTICES_8kr_8md.html  BEST__PRACTICES_8md.html  Basic-example.html  CHANGELOG.md  CHANGELOG_8kr_8md.html  CHANGELOG_8md.html  CI__CD__DASHBOARD_8kr_8md.html  CI__CD__DASHBOARD_8md.html  CI__CD__PERFORMANCE__PROPOSAL_8md.html  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CONDITIONAL__COMPILATION__REFACTORING_8md.html  (+5686 more)
benchmarks/: BASELINE.md  CMakeLists.txt  README.md  decorator_performance.cpp  logger_async_bench.cpp  logger_rotation_bench.cpp  logger_throughput_bench.cpp  logger_write_bench.cpp  main_bench.cpp  object_pool_bench.cpp
benchmarks/baselines/: baseline.json  baseline_macos_20251103.json
build_test/: Makefile
examples/: CMakeLists.txt  adapter_pattern_poc.cpp  advanced_features_demo.cpp  basic_usage.cpp  composite_writer_example.cpp  critical_logging_example.cpp  custom_writer_example.cpp  decorator_usage.cpp  di_pattern_example.cpp  distributed_logging_demo.cpp  logger_config_builder_example.cpp  metrics_demo.cpp  migration_example.cpp  monitoring_integration_example.cpp  security_demo.cpp  structured_logging_example.cpp  writer_builder_example.cpp
examples/crash_protection/: CMakeLists.txt  main.cpp
integration_tests/: CMakeLists.txt  IMPLEMENTATION_SUMMARY.md  README.md
integration_tests/failures/: error_handling_test.cpp
integration_tests/framework/: system_fixture.h  test_helpers.h
integration_tests/performance/: logger_performance_test.cpp
integration_tests/scenarios/: log_formatting_integration_test.cpp  logger_lifecycle_test.cpp  multi_writer_integration_test.cpp  thread_system_integration_test.cpp
sources/: CMakeLists.txt
sources/async/: batch_processor.cpp  batch_processor.h  high_performance_async_writer.cpp  high_performance_async_writer.h  lockfree_queue.h
sources/compatibility/: cpp_compatibility.h
sources/core/: plugin_dependency_resolver.cpp  plugin_dependency_resolver.h  plugin_manager.cpp  plugin_manager.h  plugin_registry.cpp  plugin_registry.h  smart_plugin_manager.cpp  smart_plugin_manager.h
sources/interfaces/: logger_crash_safety.h
sources/logger/: error_codes.h  logger.cpp  logger.h  logger_interface.h
sources/logger/analysis/: log_analyzer.cpp  log_analyzer.h
sources/logger/compatibility/: logger_v1_compat.h
sources/logger/config/: config_strategy_interface.h  configuration_templates.h  logger_builder.h  logger_config.h
sources/logger/core/: log_collector.cpp  log_collector.h  small_string.h
sources/logger/di/: di_container_factory.h  di_container_interface.h  lightweight_container.h  lightweight_di_container.h  thread_system_di_adapter.h
sources/logger/filters/: log_filter.h
sources/logger/flow/: overflow_policy.cpp  overflow_policy.h
sources/logger/formatters/: base_formatter.h
sources/logger/health/: health_check_system.cpp  health_check_system.h
sources/logger/interfaces/: log_entry.h  log_filter_interface.h  log_formatter_interface.h  log_sink_interface.h  log_writer_interface.h  logger_types.h
sources/logger/monitoring/: basic_monitor.h  monitoring_factory.h  monitoring_interface.h  thread_system_monitor_adapter.h
sources/logger/safety/: crash_safety.cpp
sources/logger/security/: log_sanitizer.cpp
sources/logger/server/: log_server.cpp
sources/logger/structured/: structured_logger.h
sources/logger/writers/: async_writer.h  base_writer.h  batch_writer.cpp  batch_writer.h  console_writer.cpp  console_writer.h  encrypted_writer.cpp  encrypted_writer.h  file_writer.cpp  file_writer.h  network_writer.cpp  network_writer.h  rotating_file_writer.cpp  rotating_file_writer.h
sources/logging_interfaces/: logger_interface.h  logging_interfaces.h  plugin_loader_interface.h  threading_plugin_interface.h  writer_interface.h
sources/memory/: object_pool.h
sources/threading_plugins/: thread_system_plugin.cpp  thread_system_plugin.h
tests/: CMakeLists.txt  encrypted_writer_test.cpp  integration_test.cpp  log_sampling_test.cpp  min_level_filter_test.cpp  otlp_test.cpp  realtime_analyzer_test.cpp  routing_integration_test.cpp  structured_logging_test.cpp  thread_safety_test.cpp  thread_safety_tests.cpp
tests/benchmarks/logger_benchmarks/: batch_processing_benchmark.cpp  comprehensive_benchmark.cpp  log_level_benchmark.cpp  logger_memory_benchmark.cpp  logger_performance_benchmark.cpp  logger_throughput_benchmark.cpp  multithreaded_logging_benchmark.cpp  sync_vs_async_benchmark.cpp
tests/benchmarks/writers_benchmarks/: console_writer_benchmark.cpp  writer_comparison_benchmark.cpp
tests/compatibility/: version_compatibility_test.cpp
tests/integration/: monitoring_integration_test.cpp  thread_system_integration_test.cpp
tests/unit/: CMakeLists.txt  executor_integration_test.cpp  ilogger_interface_test.cpp  thread_system_integration_module_test.cpp
tests/unit/analysis_test/: log_analyzer_test.cpp
tests/unit/builders/: CMakeLists.txt  writer_builder_test.cpp
tests/unit/collectors_test/: CMakeLists.txt  log_collector_test.cpp
tests/unit/config_test/: CMakeLists.txt  config_test.cpp  strategy_test.cpp
tests/unit/core_test/: CMakeLists.txt  error_codes_test.cpp  logger_context_test.cpp  logger_registry_test.cpp  scoped_context_guard_test.cpp  signal_manager_context_test.cpp  small_string_test.cpp  unified_log_context_test.cpp
unittest/stress_test/: CMakeLists.txt  stress_test.cpp
(+857 files in other folders)
